# FreqChain

./: .gitignore  Cargo.toml  README.md  bundler.toml
.cargo/: config
.github/workflows/: release.yml
docs/: FreqChain UI Wireframe.pdn  Granular Dragging.excalidraw  Sequence Diagram.excalidraw.md  Signal Flow.excalidraw  Signal Flow.excalidraw.md  Smoothing State.excalidraw.md  UML.excalidraw  UML.excalidraw.md
notebooks/: eq.ipynb
src/: editor.rs  freqchain.rs  lib.rs  main.rs  params.rs
src/audio_processing/: adsr.rs  biquad_filter.rs  equalizer.rs  fft.rs  frequency_sidechain.rs  mod.rs  smoother.rs  spectrum.rs
src/modules/: equalizer.rs  frequency_sidechain.rs  mod.rs  smoother.rs  spectrum.rs
src/plugin_formats/: clap.rs  mod.rs  vst3.rs
src/ui/: editor.rs  mod.rs  theme.rs  themeable.rs
src/ui/widgets/: drag.rs  group.rs  input.rs  mod.rs  param_knob.rs  spectrum.rs  value_input.rs
src/ui/widgets/equalizer/: style.rs  widget.rs
src/ui/widgets/param_knob/: mod.rs  style.rs  widget.rs
src/ui/widgets/param_slider/: style.rs  widget.rs
src/ui/widgets/param_toggle/: style.rs  widget.rs
src/ui/widgets/spectrum/: mod.rs  style.rs  widget.rs
src/util/: biquad_filter.rs  buffer_utils.rs  fft.rs  mod.rs  remap.rs
src/widgets/: param_knob.rs
xtask/: README.md
xtask/src/: main.rs
