[package]
name = "freqchain"
version = "1.0.0-alpha"
edition = "2021"
authors = ["Gluton <glutonofficial@gmail.com>"]
license = "GPL-3"
homepage = "https://github.com/GlutonOfficial/FreqChain"
repository = "https://github.com/GlutonOfficial/FreqChain"
description = "Frequency Sidechaining Plugin"

[workspace]
members = ["xtask"]

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
nih_plug = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["assert_process_allocs", "standalone"] }
nih_plug_iced = { git = "https://github.com/robbert-vdh/nih-plug.git", features = ["opengl", "opengl_canvas", "tokio"] }
atomic_refcell = "0.1.13"
realfft = "3.3.0"
triple_buffer = "7.0.0"

[profile.release]
lto = "thin"
strip = "symbols"

[profile.profiling]
inherits = "release"
debug = true
strip = "none"

[profile.dev]
debug-assertions = false